# simple-log-server

./: CMakeLists.txt  main.cpp  readme.txt  simple_log_server.cpp  simple_log_server.hpp
app/: main.cpp
src/protocol/: simple_log_protocol.hpp
src/server/: simple_log_server.cpp  simple_log_server.hpp
src/server/memory_mapped_file/: memory_mapped_file.hpp  memory_mapped_file_linux.cpp  memory_mapped_file_windows.cpp
